--- a/liboqs/tests/CMakeLists.txt
+++ b/liboqs/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories(/usr/include/malloc)
 
 # Create results directory in the build directory
 file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/results")
+file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/mem-results")
 
 option(OQS_ENABLE_TEST_CONSTANT_TIME "Build test suite with support for Valgrind-based detection of non-constant time behaviour." OFF)
 
