--- a/z_other/Dockerfile
+++ b/z_other/Dockerfile
@@ -33,9 +33,6 @@ RUN echo 'root:password' | chpasswd
 # create a user with root privileges
 RUN useradd --no-log-init --system --uid 1000 --create-home testuser
 
-# switch to the new user
-USER testuser
-
 # set working directory
 WORKDIR /home/testuser
 
@@ -44,5 +41,9 @@ RUN wget https://github.com/crt2626/pqc-eval-tools/blob/main/setup.sh
 RUN chmod +x setup.sh
 RUN mkdir /pqc && cd /pqc
 RUN git clone https://github.com/crt2626/pqc-eval-tools.git
-RUN chown -R $USER:$USER /pqc
+RUN chown -R testuser:testuser /pqc
 RUN chmod -R 755 /pqc
+
+
+# switch to the new user
+USER testuser
