--- a/z_other/Dockerfile
+++ b/z_other/Dockerfile
@@ -40,11 +40,16 @@ WORKDIR /home/testuser
 # Clone the better liboqs (better cause of me, duh tots obvs #supieor_intelect #basic-bitch #) repository and build the library
 RUN wget https://github.com/crt2626/pqc-eval-tools/blob/main/setup.sh
 RUN chmod +x setup.sh
-RUN mkdir /pqc && cd /pqc
+RUN mkdir /pqc
+WORKDIR /pqc
 RUN git clone https://github.com/crt2626/pqc-eval-tools.git
 RUN chown -R testuser:testuser /pqc
 RUN chmod -R 755 /pqc
 
+# set working directory
+WORKDIR /home/testuser
+RUN pip install pandas
+RUN pip install matplotlib
 
 # switch to the new user
 USER testuser
